[gd_scene load_steps=15 format=3 uid="uid://nk3n3e6a5tr1"]

[ext_resource type="Script" path="res://Scripts/Enemies/flying_enemy_turret.gd" id="1_oddko"]
[ext_resource type="Texture2D" uid="uid://vixdndmfcwn" path="res://Sprites/Enemies/turret.png" id="2_5o4ek"]
[ext_resource type="Texture2D" uid="uid://dl03ttlb24ada" path="res://Sprites/Explosion/explosion1.png" id="3_gnly7"]
[ext_resource type="Texture2D" uid="uid://dt4xoaxgrgijr" path="res://Sprites/Explosion/explosion2.png" id="4_mvvny"]
[ext_resource type="Texture2D" uid="uid://b5gger2f4230r" path="res://Sprites/Explosion/explosion3.png" id="5_h84r3"]
[ext_resource type="Texture2D" uid="uid://bodebyb4vgk07" path="res://Sprites/Explosion/explosion4.png" id="6_48aif"]
[ext_resource type="Texture2D" uid="uid://biskv30bbbw7q" path="res://Sprites/Explosion/explosion5.png" id="7_xrv0d"]
[ext_resource type="Texture2D" uid="uid://cb2clutnd13pb" path="res://Sprites/Explosion/explosion6.png" id="8_f7csd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wqdeg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5o4ek")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ga16"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2jb3b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g7kni"]
radius = 120.15

[sub_resource type="CircleShape2D" id="CircleShape2D_bolok"]

[sub_resource type="SpriteFrames" id="SpriteFrames_o513j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gnly7")
}, {
"duration": 1.0,
"texture": ExtResource("4_mvvny")
}, {
"duration": 1.0,
"texture": ExtResource("5_h84r3")
}, {
"duration": 1.0,
"texture": ExtResource("6_48aif")
}, {
"duration": 1.0,
"texture": ExtResource("7_xrv0d")
}, {
"duration": 1.0,
"texture": ExtResource("8_f7csd")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[node name="FlyingEnemyTurret" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 0
motion_mode = 1
script = ExtResource("1_oddko")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wqdeg")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
scale = Vector2(6.04, 6.32)
shape = SubResource("CircleShape2D_1ga16")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="HurtboxArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="Hurtbox" type="CollisionShape2D" parent="HurtboxArea"]
scale = Vector2(6.24, 6.4)
shape = SubResource("CircleShape2D_2jb3b")

[node name="SeparationArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SeparationArea"]
shape = SubResource("CircleShape2D_g7kni")

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
scale = Vector2(50, 50)
shape = SubResource("CircleShape2D_bolok")

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.501961)
position = Vector2(4, -6)
sprite_frames = SubResource("SpriteFrames_o513j")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
